--- a/index.html
+++ b/index.html
@@ -27,55 +27,128 @@ Order: Main BLOCK Class  other BLOCK Classes   Utility/Design Classes
 Logical choice to make things look more organized, but they are not fundamental -->
 <body>
     <!-- Main header - with hero background image -->
-    <header>
-        <nav class="navigation"> <!-- Flex Row with nowrap -->
+    <header class="main-header  background-primary text-colour-light">
+        <nav class="navigation flex content-width flow"> <!-- Flex Row with nowrap -->
             <!-- Discord Clickable Logo aligned to the left -->
             <a href="#">
-                <div class="discord-logo"></div>
+                <img src="./assets/images/logo.svg" alt="" class="discord-logo" />
             </a> 
-
+            
             <!-- 5 Clickable links -->
-            <a href="#">Scarica</a>
-            <a href="#">Perché Discord</a>
-            <a href="#">Nitro</a>
-            <a href="#">Sicurezza</a>
-            <a href="#">Assistenza</a>
+            <ul class="navigation__links flex">
+                <li><a href="#">Scarica</a></li>
+                <li><a href="#">Perché Discord</a></li>
+                <li><a href="#">Nitro</a></li>
+                <li><a href="#">Sicurezza</a></li>
+                <li><a href="#">Assistenza</a></li>
+            </ul>
+                  
 
             <!-- Bottone Accedi per Login -->
             <button class="login  ui-button" type="button">Accedi</button>
         </nav>
 
         <!-- Padded Section with header__info -->
-        <section class="header__info"> 
+        <section class="header__info  flow"> 
             <!-- header__info H1: centered -->
             <h1>Il tuo posto per parlare</h1>
             <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiaccherare ogni giorno e ritrovarsi più spesso.</p>
+            <!-- Two inline buttons -->
+            <button class="ui-button">Scarica per Mac</button>
+            <button class="ui-button">Apri Discord nel tuo browser</button>
         </section>
-
-        <!-- Two inline buttons -->
-        <button class="ui-button">Scarica per Mac</button>
-        <button class="ui-button">Apri Discord nel tuo browser</button>
     </header>
 
     <!-- Main container: Flex Column, with 4  rows and images -->
-    <main class="container">
-        <section class="container__content">
-            <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
-            <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+    <main class="main-container flex column content-width">
+        <h2 class="hidden-content">Caratteristiche di Discord</h2>
+        <!-- Four main sections with flex: first three are row, the last is column -->
+        <section class="main-section flex flow">
+            <img class="main-section__image" src="./assets/images/section-1.svg" alt="Discord window example">
+            <div class="main-section__content">
+                <h3>Un luogo a invito con tutto lo spazio necessario per parlare</h3>
+                <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+            </div>        
         </section>
-        <section class="container__content">
-            <h2>Dove trovarsi è facile</h2>
-            <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi istantaneamente senza dover chiamare.</p>
+        <section class="main-section flex row-reverse flow">
+            <img class="main-section__image" src="./assets/images/section-2.svg" alt="Discord window example">
+            <div class="main-section__content">
+                <h3>Dove trovarsi è facile</h3>
+                <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi istantaneamente senza dover chiamare.</p>
+            </div>        
         </section>
-        <section class="container__content">
-            <h2>Da pochi a un fandom</h2>
-            <p>Dai inizio a una community con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati e molto altro.</p>
+        <section class="main-section flex flow">
+            <img class="main-section__image" src="./assets/images/section-3.svg" alt="Discord window example">
+            <div class="main-section__content">
+                <h3>Da pochi a un fandom</h3>
+                <p>Dai inizio a una community con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati e molto altro.</p>
+            </div>        
         </section>
-        <section class="container__content">
-            <h2>Tecnologia affidabile per tenersi in contatto</h2>
-            <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+        <section class="main-section flex column flow">
+            <img class="main-section__image" src="./assets/images/section-4.svg" alt="Discord window example">
+            <div class="main-section__content">
+                <h3>Tecnologia affidabile per tenersi in contatto</h3>
+                <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+            </div>        
         </section>
     </main>
+
+    <!-- Footer: flex with 5 columns -->
+    <footer class="page-footer background-dark text-colour-light">
+        <h2 class="hidden-content">Link di navigazione fine pagina</h2>
+        <div class="footer-container  content-width flex flow">
+            <section>
+                <h3>Il tuo posto per parlare</h3>
+                <p>Italiano</p>
+                <div class="social-links"></div>
+            </section>
+            <section>
+                <h3>Prodotto</h3>
+                <ul>
+                    <li>Scarica</li>
+                    <li>Perché Discord</li>
+                    <li>Nitro</li>
+                    <li>Sicurezza</li>   
+                    <li>Assistenza</li>
+                </ul>
+            </section>
+            <section>
+                <h3>Compagnia</h3>
+                <ul>
+                    <li>Chi Siamo</li>
+                    <li>Lavora con noi</li>
+                    <li>Marchio</li>
+                    <li>Redazione</li>
+                    <li>Negozio</li>
+                </ul>
+            </section>
+            <section>
+                <h3>Risorse</h3>
+                <ul>
+                    <li>Scarica</li>
+                    <li>Perché Discord</li>
+                    <li>Nitro</li>
+                    <li>Sicurezza</li>   
+                    <li>Assistenza</li>
+                    <li>Scarica</li>
+                    <li>Perché Discord</li>
+                    <li>Nitro</li>
+                    <li>Sicurezza</li>   
+                    <li>Assistenza</li>
+                </ul>
+            </section>
+            <section>
+                <h3>Norma</h3>
+                <ul>
+                    <li>Scarica</li>
+                    <li>Perché Discord</li>
+                    <li>Nitro</li>
+                    <li>Sicurezza</li>   
+                    <li>Assistenza</li>
+                </ul>
+            </section>
+        </div>
+    </footer>
 </body>
 
 </html>
