--- a/index.html
+++ b/index.html
@@ -63,30 +63,30 @@ Logical choice to make things look more organized, but they are not fundamental 
     <main class="main-container flex column content-width">
         <h2 class="hidden-content">Caratteristiche di Discord</h2>
         <!-- Four main sections with flex: first three are row, the last is column -->
-        <section class="main-section flex flow">
-            <div class="main-section__image  image-section-1">asdad</div>
-            <div class="main-section__content">
+        <section class="main-section flex">
+            <div class="main-section__image  image-section-1"></div>
+            <div class="main-section__content flow">
                 <h3>Un luogo a invito con tutto lo spazio necessario per parlare</h3>
                 <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
             </div>        
         </section>
-        <section class="main-section flex row-reverse flow">
+        <section class="main-section flex row-reverse">
             <div class="main-section__image  image-section-2"></div>
-            <div class="main-section__content">
+            <div class="main-section__content flow">
                 <h3>Dove trovarsi è facile</h3>
                 <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi istantaneamente senza dover chiamare.</p>
             </div>        
         </section>
-        <section class="main-section flex flow">
+        <section class="main-section flex">
             <div class="main-section__image  image-section-3"></div>
-            <div class="main-section__content">
+            <div class="main-section__content flow">
                 <h3>Da pochi a un fandom</h3>
                 <p>Dai inizio a una community con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati e molto altro.</p>
             </div>        
         </section>
-        <section class="main-section flex column flow">
+        <section class="main-section flex column">
             <div class="main-section__image  image-section-4"></div>
-            <div class="main-section__content">
+            <div class="main-section__content flow">
                 <h3>Tecnologia affidabile per tenersi in contatto</h3>
                 <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
             </div>        
