--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@200;400;700;900&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;700;900&display=swap" rel="stylesheet"> 
 
     <!-- my css -->
     <link rel="stylesheet" href="./stylesheets/css-reset.css">
@@ -85,11 +85,15 @@ Logical choice to make things look more organized, but they are not fundamental 
             </div>        
         </section>
         <section class="main-section flex column">
-            <div class="main-section__image  image-section-4"></div>
             <div class="main-section__content flow">
                 <h3>Tecnologia affidabile per tenersi in contatto</h3>
                 <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
-            </div>        
+            </div> 
+            <div class="main-section__image  image-section-4"></div>
+            <div class="last-section-content">
+                <p>Pronto a iniziare la tua avventura?</p>
+                <button class="download-button  header-button ui-button">Scarica per Mac</button>
+            </div>       
         </section>
     </main>
 
