--- a/index.html
+++ b/index.html
@@ -90,10 +90,8 @@ Logical choice to make things look more organized, but they are not fundamental 
                 <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
             </div> 
             <div class="main-section__image  image-section-4"></div>
-            <div class="last-section-content">
-                <p>Pronto a iniziare la tua avventura?</p>
-                <button class="download-button  header-button ui-button">Scarica per Mac</button>
-            </div>       
+            <p id="bottom-download-prompt">Pronto a iniziare la tua avventura?</p>
+            <button class="download-button  header-button ui-button">Scarica per Mac</button>      
         </section>
     </main>
 
