--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ Logical choice to make things look more organized, but they are not fundamental 
 
         <!-- Top NAVIGATION bar: containers Discord-Logo (clickable), inline links and a login button -->
         <nav class="navigation flex content-width flow"> <!-- Flex Row with nowrap -->
+            <h2 class="hidden-content">Top Page Navigation</h2>
             <!-- Discord Clickable Logo aligned to the left -->
             <a href="https://discord.com/" target="_blank"><img src="./assets/images/logo.svg" alt="Discord Logo" class="discord-logo" /></a> 
             
@@ -60,7 +61,7 @@ Logical choice to make things look more organized, but they are not fundamental 
     </header>
 
     <!-- Main container: Flex Column, with 4  rows and images -->
-    <main class="main-container flex column content-width">
+    <main class="main-container content-width flow">
         <h2 class="hidden-content">Caratteristiche di Discord</h2>
         <!-- Four main sections with flex: first three are row, the last is column -->
         <section class="main-section flex">
