--- a/index.html
+++ b/index.html
@@ -61,38 +61,47 @@ Logical choice to make things look more organized, but they are not fundamental 
     </header>
 
     <!-- Main container: Flex Column, with 4  rows and images -->
-    <main class="main-container content-width flow">
+    <main class="main-container flow">
         <h2 class="hidden-content">Caratteristiche di Discord</h2>
         <!-- Four main sections with flex: first three are row, the last is column -->
-        <section class="main-section flex">
-            <div class="main-section__image  image-section-1"></div>
-            <div class="main-section__content flow">
-                <h3>Un luogo a invito con tutto lo spazio necessario per parlare</h3>
-                <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+        <section class="main-section">
+            <div class="flex content-width">
+                <div class="main-section__image  image-section-1"></div>
+                <div class="main-section__content flow">
+                    <h3>Un luogo a invito con tutto lo spazio necessario per parlare</h3>
+                    <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+                </div>       
             </div>        
         </section>
-        <section class="main-section flex row-reverse">
-            <div class="main-section__image  image-section-2"></div>
-            <div class="main-section__content flow">
-                <h3>Dove trovarsi è facile</h3>
-                <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi istantaneamente senza dover chiamare.</p>
+        <section class="main-section">
+            <div class="flex row-reverse content-width">
+                <div class="main-section__image  image-section-2"></div>
+                <div class="main-section__content flow">
+                    <h3>Dove trovarsi è facile</h3>
+                    <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi istantaneamente senza dover chiamare.</p>
+                </div>       
             </div>        
         </section>
-        <section class="main-section flex">
-            <div class="main-section__image  image-section-3"></div>
-            <div class="main-section__content flow">
-                <h3>Da pochi a un fandom</h3>
-                <p>Dai inizio a una community con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati e molto altro.</p>
+        <section class="main-section">
+            <div class="flex content-width">
+                <div class="main-section__image  image-section-3"></div>
+                <div class="main-section__content flow">
+                    <h3>Da pochi a un fandom</h3>
+                    <p>Dai inizio a una community con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati e molto altro.</p>
+                </div>       
             </div>        
         </section>
-        <section class="main-section flex column">
-            <div class="main-section__content flow">
-                <h3>Tecnologia affidabile per tenersi in contatto</h3>
-                <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
-            </div> 
-            <div class="main-section__image  image-section-4"></div>
-            <p id="bottom-download-prompt">Pronto a iniziare la tua avventura?</p>
-            <button class="download-button  header-button ui-button">Scarica per Mac</button>      
+        <section class="main-section">
+            <div class="flex column content-width">
+                <div class="main-section__content flow">
+                    <h3>Tecnologia affidabile per tenersi in contatto</h3>
+                    <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+                </div> 
+     
+                <div class="main-section__image  image-section-4"></div>
+                <p id="bottom-download-prompt">Pronto a iniziare la tua avventura?</p>
+                <button class="download-button  header-button ui-button">Scarica per Mac</button>      
+            </div>
         </section>
     </main>
 
